--- a/templates/input.html
+++ b/templates/input.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <form action="http://127.0.0.1:5000/api" method="POST">
-    <input type="text" name="hello" id= "hello" placeholder="input">
+    <input type="text/html" name="hello" id= "hello" placeholder="input">
     <input type="submit">
   </form>
 <!-- <script>
